--- a/angular.json
+++ b/angular.json
@@ -46,12 +46,23 @@
               "outputHashing": "all"
             },
             "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
+              "preserveSymlinks": true,
+              "buildOptimizer": true,
+              "optimization": true,
+              "vendorChunk": false,
+              "extractLicenses": true,
+              "sourceMap": false,
+              "namedChunks": false,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ],
+              "allowedCommonJsDependencies": [
+                "@statsig/js-client",
+                "@statsig/client-core"
+              ]
             }
           },
           "defaultConfiguration": "production"
